[project]
name = "networkx-mojo"
version = "0.1.0"
description = "An efficient Mojo implementation of a subset of NetworkX (Graph/DiGraph, algorithms, and attributes)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/jloveric/networkx-mojo"
Repository = "https://github.com/jloveric/networkx-mojo"
Issues = "https://github.com/jloveric/networkx-mojo/issues"

[project.optional-dependencies]
bench = [
    "networkx>=3.4",
    "matplotlib>=3.9",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
